change css name

--- a/MEhome/pc/src/index.html
+++ b/MEhome/pc/src/index.html
@@ -4,9 +4,9 @@
     <title>MEhome</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 原型使用，如果项目中有类似重置css则无需该reset.css -->
+    <!-- 原型使用，如果项目中有类似重置css则无需该reset.css 以免影响其它样式-->
     <link rel="stylesheet" href="css/reset.css">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/tablels.css" rel="stylesheet">
   </head>
   <body>
     <!--  -->
@@ -53,7 +53,7 @@
             <div class="mh-tablels__table-body">
 
               <!-- 一条数据 -->
-              <div class="mh-tablels__tr1 is-active">
+              <div class="mh-tablels__item is-active">
                 <ul class="clearfix">
                     <li class="mh-tablels__address">North Vancouver，BC</li>
                     <li class="mh-tablels__house-age">100</li>
@@ -64,8 +64,9 @@
                     <li class="mh-tablels__shower-room">1卫</li>
                 </ul>
               </div>
-              <div class="mh-tablels__tr2 clearfix">
-                <!-- 可以使用jquery插件superslide  -->
+              <!-- 数据明细 -->
+              <div class="mh-tablels__item-detail clearfix">
+                <!-- 可以使用jquery插件superslide  http://www.superslide2.com/demo.html-->
                 <div class="mh-tablels__slider fl">
                   <!-- 轮播主体 -->
                   <div class="mh-tablels__slider-bd">
@@ -128,7 +129,7 @@
                 </table>
               </div>
               <!-- 一条数据 -->
-              <div class="mh-tablels__tr1">
+              <div class="mh-tablels__item">
                 <ul class="clearfix">
                   <li class="mh-tablels__address">North Vancouver，BC</li>
                   <li class="mh-tablels__house-age">100</li>
@@ -139,7 +140,7 @@
                   <li class="mh-tablels__shower-room">1卫</li>
                 </ul>
               </div>
-              <div class="mh-tablels__tr2 clearfix hide">
+              <div class="mh-tablels__item-detail clearfix hide">
                 <div class="mh-tablels__slider fl">
                   <div class="mh-tablels__slider-bd">
                     <ul>
@@ -195,7 +196,7 @@
                 </table>
               </div>
               <!-- 一条数据 -->
-              <div class="mh-tablels__tr1">
+              <div class="mh-tablels__item">
                 <ul class="clearfix">
                   <li class="mh-tablels__address">地址</li>
                   <li class="mh-tablels__house-age">房龄</li>
@@ -206,7 +207,7 @@
                   <li class="mh-tablels__shower-room">浴室</li>
                 </ul>
               </div>
-              <div class="mh-tablels__tr2 clearfix hide">
+              <div class="mh-tablels__item-detail clearfix hide">
                 <div class="mh-tablels__slider fl">
                   <div class="mh-tablels__slider-bd">
                     <ul>
@@ -261,7 +262,7 @@
                 </table>
               </div>
              <!-- 一条数据 -->
-             <div class="mh-tablels__tr1">
+             <div class="mh-tablels__item">
                 <ul class="clearfix">
                   <li class="mh-tablels__address">地址</li>
                   <li class="mh-tablels__house-age">房龄</li>
@@ -272,7 +273,7 @@
                   <li class="mh-tablels__shower-room">浴室</li>
                 </ul>
               </div>
-              <div class="mh-tablels__tr2 clearfix hide">
+              <div class="mh-tablels__item-detail clearfix hide">
                 <div class="mh-tablels__slider fl">
                   <div class="mh-tablels__slider-bd">
                     <ul>
