add left and right icon

--- a/MEhome/h5/src/Map.html
+++ b/MEhome/h5/src/Map.html
@@ -85,40 +85,45 @@
     </div>
 
     <!-- MEhome sale slide item -->
-    <div class="mh-map__slide">
-      <div class="mh-map__slide-bd">
-        <ul>
-          <li>
-            <div class="mh-map__slide-pic">
-              <img src="" alt="">
-            </div>
-            <div class="mh-map__slide-content">
-              <h4 class="mh-map__slide-title">
-                8391 Fairway Road
-              </h4>
-              <div class="mh-map__slide-desc">
-                <span></span>
-                <span></span>
-                <span></span>
-              </div>
-              <div class="mh-map__slide-info">
-                <span class="mh-map__slide-address">
-
-                </span>
-                <span class="mh-map__slide-price">
-
-                </span>
-              </div>
-            </div>
-
-          </li>
-        </ul>
+    <div class="mh-map__slide-fix">
+      <div class="mh-map__slide">
+        <!-- slide -->
+        <div class="mh-map__slide-bd">
+            <ul>
+              <li class="flex">
+                <div class="mh-map__slide-pic">
+                  <img src="./img/map/map_item.jpg" width="100%" alt="">
+                </div>
+                <div class="flex-1 mh-map__slide-content">
+                  <h4 class="mh-map__slide-title">
+                    8391 Fairway Road
+                  </h4>
+                  <div class="mh-map__slide-desc">
+                    <span>5卧3卫</span> |
+                    <span>3920 平方公尺</span> |
+                    <span>别墅</span>
+                  </div>
+                  <div class="mh-map__slide-info flex flex-pack-justify">
+                    <span class="mh-map__slide-address">
+                      温哥华 列治文
+                    </span>
+                    <span class="mh-map__slide-price">
+                      $ 36.99 万
+                    </span>
+                  </div>
+                </div>
+              </li>
+            </ul>
+        </div>
+        <span class="mh-map__slide-prev">
+          <i class="iconfont icon-left-arrow"></i>
+        </span>
+        <span class="mh-map__slide-next">
+          <i class="iconfont icon-right-arrow"></i>
+        </span>
       </div>
-      <span class="mh-map__slide-prev">
-        <i></i>
-      </span>
-      <span class="mh-map__slide-next"></span>
     </div>
+
 
   </div>
 </body>
