--- a/MEhome/h5/src/SchoolList.html
+++ b/MEhome/h5/src/SchoolList.html
@@ -19,61 +19,50 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="fonts/iconfont.css">
   <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/school-list.css">
+  <link rel="stylesheet" href="css/school.css">
 </head>
 <body>
   <div class="mh-main">
     <!-- head -->
     <div class="mh-header flex mh-header-fix">
-      <div class="mh-header__left">
+      <div class="mh-header__school-left">
         <span class="mh-header__back"><i class="iconfont icon-back"></i></span>
       </div>
-      <div class="mh-header__center flex-1">
-        <!-- 占位 -->
-        <div class="mh-header__place"></div>
-        <div class="mh-header__search">
-          <span class="mh-header__search-icon">
-            <i class="iconfont icon-search"></i>
-          </span>
-          <input type="text" class="mh-header__input mh-header__input--tiny" placeholder="MLS编号， 地址，城市">
-        </div>
+      <div class="mh-header__center flex-1 tc">
+        <div class="mh-header__logo-large"></div>
       </div>
       <div class="mh-header__right tc">
         <span class="mh-header__icon-star">
           <i class="mh-header__right-icon iconfont icon-star"></i>
         </span>
         <span class="mh-header__icon-filter">
-          <i class="mh-header__right-icon iconfont icon-filter-selected"></i>
+          <i class="mh-header__right-icon iconfont icon-share"></i>
         </span>
       </div>
     </div>
 
     <!-- filter -->
-    <div class="mh-map__filter mh-map__filter-fix">
+    <div class="mh-filter">
       <ul class="flex flex-align-center">
         <li class="flex-1">
-          <span class="mh-map__filter-name">区域</span>
-          <span class="mh-map__filter-icon">
+          <span class="mh-filter-name">城市</span>
+          <span class="mh-filter-icon">
             <i class="iconfont icon-down"></i>
           </span>
         </li>
         <li class="flex-1">
-          <span class="mh-map__filter-name">价格</span>
-          <span class="mh-map__filter-icon">
+          <span class="mh-filter-name">学校类型</span>
+          <span class="mh-filter-icon">
             <i class="iconfont icon-down"></i>
           </span>
         </li>
         <li class="flex-1">
-          <span class="mh-map__filter-name">所有房型</span>
-          <span class="mh-map__filter-icon">
-            <i class="iconfont icon-down"></i>
-          </span>
         </li>
-        <li class="flex-1 active">
-          <span class="mh-map__filter-name">更多</span>
-          <span class="mh-map__filter-icon">
-            <i class="iconfont icon-up"></i>
+        <li class="flex-1">
+          <span class="mh-filter-icon mh-filter__icon-left">
+              <i class="iconfont icon-reset"></i>
           </span>
+          <span class="mh-filter-name">重置</span>
         </li>
       </ul>
     </div>
@@ -88,41 +77,70 @@
         </ul>
       </div>
       <div class="mh-school__tabs-tips">
-
+        学校排名是根据菲莎研究所的专业调查和研究所取得的权威性排名，壹品温房只对学校排名进行汉化及整理
       </div>
       <!-- tabs content -->
       <div class="mh-school__tabs-content">
         <div class="mh-school__tabs-pane active">
-          <!-- item  -->
+          <!-- item 2  -->
           <div class="mh-school__item flex">
             <div class="mh-school__item-pic">
               <span class="mh-school__item-mask">new</span>
-              <img src="" alt="">
+              <img src="./img/school/school_item_pic.jpg" alt="">
             </div>
             <div class="mh-school__item-content">
-              <div class="mh-school__cnname">
-
+              <div class="mh-school__item-cnname">
+                维多利亚中学
               </div>
-              <div class="mh-school__enname">
-
+              <div class="mh-school__item-enname">
+                VICTORIA HIGH SCHOOL
               </div>
-              <div class="mh-map__item-desc">
-                <span>5卧3卫</span> |
-                <span>3920 平方公尺</span>
+              <div class="mh-school__item-desc">
+                <span>维多利亚</span> |
+                <span>私立</span>
               </div>
-              <div class="mh-map__item-ranking flex flex-pack-justify">
-                <span class="mh-map__ranking-year">
+              <div class="mh-school__item-ranking flex flex-pack-justify">
+                <span class="mh-school__ranking-year">
                   温哥华 列治文
                 </span>
-                <span class="mh-map__ranking-num">
+                <span class="mh-school__ranking-num">
+                  1 / 295
+                </span>
+              </div>
+            </div>
+          </div>
+          <!-- item 2  -->
+          <div class="mh-school__item flex">
+            <div class="mh-school__item-pic">
+              <span class="mh-school__item-mask">new</span>
+              <img src="./img/school/school_item_pic.jpg" alt="">
+            </div>
+            <div class="mh-school__item-content">
+              <div class="mh-school__item-cnname">
+                维多利亚中学
+              </div>
+              <div class="mh-school__item-enname">
+                VICTORIA HIGH SCHOOL
+              </div>
+              <div class="mh-school__item-desc">
+                <span>维多利亚</span> |
+                <span>私立</span>
+              </div>
+              <div class="mh-school__item-ranking flex flex-pack-justify">
+                <span class="mh-school__ranking-year">
+                  温哥华 列治文
+                </span>
+                <span class="mh-school__ranking-num">
                   1 / 295
                 </span>
               </div>
             </div>
           </div>
 
-        </div>
 
+
+        </div>
+        <!-- tabs-pane  -->
         <div class="mh-school__tabs-pane">
 
         </div>
