--- a/MEhome/h5/src/Evaluation.html
+++ b/MEhome/h5/src/Evaluation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover,user-scalable=no"/>
   <meta name="format-detection" content="telephone=no"/>
   <meta name="format-detection" content="email=no"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -85,7 +85,7 @@
     <!-- bottom contact link -->
     <div class="mh-contact flex flex-pack-justify flex-align-center">
       <div class="mh-contact__logo">
-        <img src="./img/Logo.png" class="mh-contact__logo-img" alt="">
+        <div class="mh-contact__logo-img"></div>
       </div>
       <div class="mh-contact__tel">
         <div class="mh-contact__tel-item">
