--- a/MEhome/h5/src/Map.html
+++ b/MEhome/h5/src/Map.html
@@ -43,7 +43,7 @@
           <i class="mh-header__right-icon iconfont icon-star"></i>
         </span>
         <span class="mh-header__icon-filter">
-          <i class="mh-header__right-icon iconfont icon-filter-selected"></i>
+          <i class="mh-header__right-icon iconfont icon-filter-empty"></i>
         </span>
       </div>
     </div>
