--- a/MEhome/h5/src/SchoolList.html
+++ b/MEhome/h5/src/SchoolList.html
@@ -161,7 +161,7 @@
     <!-- bottom contact link -->
     <div class="mh-contact flex flex-pack-justify flex-align-center">
       <div class="mh-contact__logo">
-        <img src="./img/Logo.png" class="mh-contact__logo-img" alt="">
+        <div class="mh-contact__logo-img"></div>
       </div>
       <div class="mh-contact__tel">
         <div class="mh-contact__tel-item">
