--- a/MEhome/h5/src/Map.html
+++ b/MEhome/h5/src/Map.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover,user-scalable=no"/>
   <meta name="format-detection" content="telephone=no"/>
   <meta name="format-detection" content="email=no"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -16,13 +16,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1">
   <title>MEhome-h5 Map</title>
   <script src="./js/rem100.js"></script>
+  <!-- 微信中兼容iPhoneX -->
+  <script src="./js/iphonex.js"></script>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="fonts/iconfont.css">
   <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/map.css">
+  <link rel="stylesheet" href="css/iphonex.css">
 </head>
 <body>
-  <div class="mh-map">
+  <div class="mh-map has-bottombar has-white-bottombar">
     <!-- head -->
     <div class="mh-header flex mh-header-fix">
       <div class="mh-header__left">
@@ -85,7 +88,7 @@
     </div>
 
     <!-- MEhome sale slide item -->
-    <div class="mh-map__slide-fix">
+    <div class="mh-map__slide-fix bottom-menu-fixed">
       <div class="mh-map__slide">
         <!-- slide -->
         <div class="mh-map__slide-bd">
